finalized dark mode stylings, fixed centering for small screens, adjusted side nav with full height, started on saved files

--- a/src/App.css
+++ b/src/App.css
@@ -2,44 +2,35 @@
 
 :root {
   height: 100vh;
+  --background-color-light: #fff;
+  --background-color-light-2: #eeeeee;
+  --background-color-light-3: #001c81;
+  --text-color-light: #d9d9d9;
   
-}
-
-:root {
-  --background-color-light: #fff; /* Default background color in light mode */
-  --background-color-light-2: #e2e2e2;
-
-  --text-color-light: #000; /* Default text color in light mode */
-  --text-color-light-list: #354f;
-  
-  --background-color-dark: #132a18; /* Background color in dark mode */
-  --text-color-dark: #000; /* Text color in dark mode */
+  --background-color-dark: #040128ee;
+  --background-color-dark-2: #040128;
+  --background-color-dark-3: #0ebfdb;
+  --hover-color-dark: #1881c2;
+  --text-color-dark: #fff;
 }
 
 body {
   background-color: var(--background-color-light);
-  color: var(--text-color-light);
-}
-
-/* Add styles for dark mode */
-body.dark-mode {
-  background-color: var(--background-color-dark);
-  color: var(--text-color-dark);
-}
-
-body {
   margin: 0;
   display: flex;
   justify-content: center;
   align-items: center; 
-  
+}
+
+body.dark-mode {
+  background-color: var(--background-color-dark);
+  color: var(--text-color-dark);
 }
 
 #app-container {
   width: 420px;
   box-sizing: border-box;
   margin: 0 auto;
-
 }
 
 form {
@@ -80,10 +71,16 @@ form {
 
 .list li {
   border-bottom: 1px solid #ccc;
-  padding-bottom: 8px;
-  margin-bottom: 8px;
-  color: var(--text-color-light-list);
-  /* background-color: var(--background-color-light-2); */
+  padding-bottom: 14px;
+  margin-top: 12px;
+  color: black;
+}
+
+body.dark-mode .list li {
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 14px;
+  margin-top: 12px;
+  color: darkgray;
 }
 
 .new-item-form {
@@ -92,8 +89,18 @@ form {
   background-color: var(--background-color-light-2);
 }
 
+body.dark-mode .new-item-form {
+  display: flex;
+  flex-direction: row;
+  background-color: transparent;
+}
+
 .list-bg {
   background-color: var(--background-color-light-2);
+}
+
+body.dark-mode .list-bg {
+  background-color: var(--background-color-dark-2);
 }
 
 .btn {
@@ -101,7 +108,7 @@ form {
   display: flex;
   justify-content: center;
   color: #ffffff;
-  background-color: #5DC09A;
+  background-color: var(--background-color-light-3);
   padding: 7px;
   border-radius: 3px;
   cursor: pointer;
@@ -135,7 +142,18 @@ form {
 
 .title-input {
   font-family: 'Poppins', sans-serif;
-  color: var(--text-color-light-list);
+  color: black;
+  border-bottom: 2px solid #d9d9d9;
+}
+
+body.dark-mode .title-input {
+  font-family: 'Poppins', sans-serif;
+  color: #fff;
+}
+
+.title-input:hover {
+  scale: 1.1;
+  transition: ease-in-out 0.2s;
 }
 
 #title-input-save {
@@ -144,32 +162,56 @@ form {
 }
 
 #select-all {
-  /* border: #354f; */
   outline-style: solid;
-  outline-color: #c0bda5;
-  background-color: transparent;
-  color: #c0bda5;
+  background-color: var(--background-color-light-3);
   width: 40px;
 }
+
+body.dark-mode #save-list,
+body.dark-mode #select-all,
+body.dark-mode #clear-all {
+  background-color: var(--background-color-dark-3);
+  outline: none;
+}
+
+body.dark-mode #save-list:hover,
+body.dark-mode #select-all:hover,
+body.dark-mode #clear-all:hover {
+  background-color: var(--hover-color-dark);
+}
+
+#select-all:hover {
+  background-color: #0ebfdb;
+  transition: ease-in-out 200ms;}
 
 #save-list {
   width: 130px;
 }
 
+#save-list:hover {
+  background-color: #0ebfdb;
+  transition: ease-in-out 200ms;}
+
 #delete-single-btn {
-  color: #c0bda5;
+  color: var(--background-color-light-3);
+  background-color: var(--background-color-light-2);
+}
+
+body.dark-mode #delete-single-btn {
+  color: var(--background-color-dark-3);
+  background-color: transparent;
 }
 
 #clear-all {
-  /* border: #354f; */
   outline-style: solid;
-  outline-color: #c0bda5;
-  background-color: #c0bda5;
+  background-color: var(--background-color-light-3);
   color: white;
   width: 40px;
 }
 
-/* CLEAR ALL POPUP */
+#clear-all:hover {
+  background-color: #0ebfdb;
+  transition: ease-in-out 200ms;}
 
 .popup {
   position: fixed;
@@ -199,8 +241,8 @@ form {
   border: solid black 2px;
   padding: 5px 35px;
   border-radius: 14px;
-  border-color: #354f;
-  color: #354f;
+  border-color: var(--background-color-light-3);
+  color: var(--background-color-light-3);
   cursor: pointer;
 }
 
@@ -208,8 +250,8 @@ form {
   border: solid black 2px;
   padding: 5px 35px;
   border-radius: 14px;
-  background-color: #354f;
-  border-color: #354f;
+  background-color: var(--background-color-light-3);
+  border-color: var(--background-color-light-3);
   color: white;
   cursor: pointer;
 }
@@ -219,37 +261,62 @@ form {
 }
 
 #list-edit-btn {
-  color: #5DC09A;
+  color: var(--background-color-light-3);
+}
+
+body.dark-mode #list-edit-btn {
+  color: var(--background-color-dark-3);
+}
+
+.side-nav {
+  background-color: var(--background-color-light-3);
+  color: var(--text-color-light-);
+}
+
+body.dark-mode .side-nav {
+  background-color: var(--background-color-dark-2);
+  color: var(--text-color-light);
+}
+
+body.dark-mode .bottom-nav {
+  background-color: var(--background-color-dark-2);
+  color: var(--text-color-light);
+}
+
+.bottom-nav {
+  background-color: var(--background-color-light-3);
+  color: var(--text-color-light);
 }
 
 @media (min-width: 768px) {
   .bottom-nav {
     display: none;
+    
 }}
+@media (min-width: 768px) {
+  body {
+    padding-left: 70px;
+  }
+    
+}
 
 @media (max-width: 768px) {
   .side-nav {
-    display: none;
-}}
+    display: none !important;
+}
+  
+}
 
   .nav-button {
-    color: #354f;
+    color: var(--text-color-light);
     border: none;
     background: none;
     cursor: pointer;
   }
 
 .nav-button:hover {
-background-color: #132a18;
+background-color: #0ebfdb;
 transition: ease-in-out 200ms;}
-
-/* .active, .active:hover {
-  border-bottom: 2px red;
-} */
-
-#nav-circle {
-  color: #354f;
-}
 
 .card {
   background-color: white;
